<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    tools:context=".FragmentLogIn">

    <FrameLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/main_content"
        android:layout_height="match_parent"
        android:layout_width="match_parent" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="264dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/emailButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="331dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_rectangle"
                android:padding="5dp"
                android:text="@string/login_email"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/color_on_primary"
                app:cornerRadius="8dp"
                app:rippleColor="#33AAAAAA"
                app:strokeColor="@android:color/black"
                app:strokeWidth="10dp" />

            <Button
                android:id="@+id/appleButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="331dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_rectangle"
                android:padding="5dp"
                android:text="@string/login_apple"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/color_on_primary"
                app:cornerRadius="8dp"
                app:rippleColor="#33AAAAAA"
                app:strokeColor="@android:color/black"
                app:strokeWidth="10dp" />

            <Button
                android:id="@+id/facebookButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="331dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_rectangle"
                android:padding="5dp"
                android:text="@string/login_facebook"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/color_on_primary"
                app:cornerRadius="8dp"
                app:rippleColor="#33AAAAAA"
                app:strokeColor="@android:color/black"
                app:strokeWidth="10dp" />

        </LinearLayout>

    </FrameLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="411dp"
        android:layout_height="257dp"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="371dp"
        android:contentDescription="@string/imgdesc"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.737"
        app:srcCompat="@drawable/logo_white_transparent" />


</androidx.constraintlayout.widget.ConstraintLayout>
